[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gotipy"
authors = [{name = "Alyetama", email = "56323389+Alyetama@users.noreply.github.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["requests"]

[project.urls]
Home = "https://github.comm/Alyetama/gotipy"
