[tool.poetry]
name = "gotipy"
version = "0.2.2"
description = "A simple Python wrapper for Gotify"
authors = ["Mohammad Alyetama <malyetama@pm.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
